--- a/cuckoofilter.cabal
+++ b/cuckoofilter.cabal
@@ -8,9 +8,9 @@ build-type:            Simple
 library
   build-depends:
                        base                            >= 3          && < 5
+                     , containers                      == 0.5.*
                      , hashable                        == 1.2.*
                      , split                           == 0.2.*
-                     , vector                          == 0.10.*
 
   ghc-options:
                        -Wall
