--- a/cuckoofilter.cabal
+++ b/cuckoofilter.cabal
@@ -10,6 +10,7 @@ library
                        base                            >= 3          && < 5
                      , containers                      == 0.5.*
                      , hashable                        == 1.2.*
+                     , lrucache                        == 1.2.*
                      , split                           == 0.2.*
 
   ghc-options:
@@ -19,7 +20,8 @@ library
                        src
 
   exposed-modules:
-                       Cuckoo.Filter
+                       Arc
+                     , Cuckoo.Filter
 
 
 
